--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-arviz
-bambi
-dash
-dash_bootstrap_components
-dash_bootstrap_templates
-numpy
-pandas
-plotly
-xarray
-gunicorn
+arviz==0.15.0
+bambi==0.10.0
+dash==2.7.1
+dash_bootstrap_components==1.3.1
+dash_bootstrap_templates==1.0.8
+numpy==1.22.1
+pandas==1.5.2
+plotly==5.12.0
+xarray==2023.2.0
